eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age1__c</fullName>
        <formula>IF(ISNULL( Birthdate ),0,FLOOR((TODAY()- Birthdate )/365.2425))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Name__c</fullName>
        <label>Business Contact Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Fax_No__c</fullName>
        <label>Business Fax No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Consumer_Indebtedness_Index_SPA__c</fullName>
        <label>Consumer Indebtedness Index - SPA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Indebtedness_Index_SP__c</fullName>
        <label>Consumer Indebtedness Index - SP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <description>Please complete all methods of contact allowed.</description>
        <label>How can we contact you?</label>
        <picklist>
            <picklistValues>
                <fullName>Post (1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone (2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email (3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax (4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS (5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contact (6)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correspondence_Address_Line_1__c</fullName>
        <label>Correspondence Address Line 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence_Address_Line_2__c</fullName>
        <label>Correspondence Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence_Address_Line_3__c</fullName>
        <label>Correspondence Address Line 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence_All_Accounts__c</fullName>
        <label>Correspondence All Accounts</label>
        <picklist>
            <picklistValues>
                <fullName>First named (1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second named (2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third named (3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth named (4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other please specify (5)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correspondence_Post_Code__c</fullName>
        <label>Correspondence Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Flat_No__c</fullName>
        <label>Flat_No</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_House_Name__c</fullName>
        <label>House Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_House_No__c</fullName>
        <label>House No</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Line_4__c</fullName>
        <label>Address Line 4</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Post_Code__c</fullName>
        <label>Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_E_mail_Status__c</fullName>
        <description>Customer e-mail status update following e-marketing</description>
        <label>Current E-mail Status</label>
        <picklist>
            <picklistValues>
                <fullName>Bounce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Bounce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Card_Name__c</fullName>
        <label>Customer Card Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <externalId>true</externalId>
        <label>EBS Customer Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_Moved_To_Current_Address__c</fullName>
        <label>Date moved to current address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Visa_Expiry__c</fullName>
        <label>Date of Visa Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Short_Name__c</fullName>
        <label>Default A/C Short Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dual_Nationality_Country_of_Origin__c</fullName>
        <label>Dual Nationality Country of Origin</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dual_Nationality_Passport_No__c</fullName>
        <label>Dual Nationality Passport No</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <formula>Account.EBS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evidence_of_Address__c</fullName>
        <label>Evidence of Address</label>
        <picklist>
            <picklistValues>
                <fullName>Utility bill from last 3 mths (1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recent UK Driving License (10)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Centre (11)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council tax bill LT 3 Months (2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Statement LT 3 Months (3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Statement LT 3 Months (4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Address (No PO Box) (5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Book with Address (6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inland Revenue Correspondence (7)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter from valid instituition (8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A Young Person (9)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experian_Decision__c</fullName>
        <label>Experian Decision</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Delphi_Score__c</fullName>
        <label>Experian Delphi Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experian_Policy_Rule__c</fullName>
        <label>Experian Policy Rule</label>
        <length>62</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Contact_Detail_Address_1__c</fullName>
        <label>Guardian Contact Detail: Address 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Contact_Detail_Address_2__c</fullName>
        <label>Guardian Contact Detail: Address 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Contact_Detail_Address_3__c</fullName>
        <label>Guardian Contact Detail: Address 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Contact_Detail_Name__c</fullName>
        <label>Guardian Contact Detail: Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Contact_Detail_Post_Code__c</fullName>
        <label>Guardian Contact Detail: Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBB_Decision__c</fullName>
        <label>IBB Decision</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBB_Staff_member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IBB Staff member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Document_Serial_No__c</fullName>
        <label>ID Document Serial No</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Evidence__c</fullName>
        <label>ID Evidence</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Centre (A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current passport photocopied (2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current signed passport (1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current UK issued travel doc (6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A Young Person (9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK driving license (4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National ID card (3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit book/pension book (5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Office Ind app card (7)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional photocard (8)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Issue_Date__c</fullName>
        <label>ID Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_In_Products_and_Services__c</fullName>
        <label>Interest In Products and Services</label>
        <picklist>
            <picklistValues>
                <fullName>Business Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy to Let</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Account and Term Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islamic Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takafal (insurance)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Experian_Ref_No__c</fullName>
        <label>Last Experian Ref No</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Experian_Search_Date__c</fullName>
        <label>Last Experian Search Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Consent_Obtained__c</fullName>
        <description>Are you interested in receiving information on other products and services IBB have to offer?</description>
        <label>Marketing Consent Obtained</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Asst_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Assistants Phone</description>
        <formula>IF( 
        LEN( AssistantPhone )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(AssistantPhone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   AssistantPhone , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Assistants Phone</inlineHelpText>
        <label>NVM Asst. Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Home_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Home Phone</description>
        <formula>IF( 
        LEN( HomePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(HomePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   HomePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Home Phone</inlineHelpText>
        <label>NVM Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Mobile__c</fullName>
        <description>NewVoiceMedia click to dial Mobile Phone</description>
        <formula>IF( 
        LEN( MobilePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   MobilePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Mobile Phone</inlineHelpText>
        <label>NVM Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Other_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Other Phone</description>
        <formula>IF( 
        LEN( OtherPhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(OtherPhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   OtherPhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Other Phone</inlineHelpText>
        <label>NVM Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN(  Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   Phone, &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_to_appear_on_Statements__c</fullName>
        <inlineHelpText>Address Line 1. Name to appear on statements cheque book and paying-in book</inlineHelpText>
        <label>Name to appear on bank correspondence</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <label>Organisation Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Issue_Place__c</fullName>
        <description>Country/Place of Issue-Passport (non resident)</description>
        <label>Country/Place of Issue-Passport</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Held__c</fullName>
        <label>Position Held</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Address_Address_Line_2__c</fullName>
        <label>Prev Address: Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Address_Address_Line_3__c</fullName>
        <label>Prev Address: Address Line 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Address_Address_Line_4__c</fullName>
        <label>Prev Address: Address Line 4</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Address_DateMovedTo__c</fullName>
        <label>Prev Address: Date moved to Address</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Address_Flat_No__c</fullName>
        <label>Prev Address: Flat No</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Address_Foreign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prev Address: Is Foreign Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prev_Address_House_Name__c</fullName>
        <label>Prev Address: House Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Address_House_No__c</fullName>
        <label>Prev Address: House No</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Address_Post_Code__c</fullName>
        <label>Prev Address: Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Prev_Address_Address_Line_2__c</fullName>
        <label>Prev Prev Address: Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Prev_Address_Address_Line_3__c</fullName>
        <label>Prev Prev Address: Address Line 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Prev_Address_Address_Line_4__c</fullName>
        <label>Prev Prev Address: Address Line 4</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Prev_Address_DateMovedTo__c</fullName>
        <label>Prev Prev Address: Date moved to Address</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Prev_Address_Flat_No__c</fullName>
        <label>Prev Prev Address: Flat No</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Prev_Address_Foreign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prev Prev Address: Is Foreign Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prev_Prev_Address_House_Name__c</fullName>
        <label>Prev Prev Address: House Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Prev_Address_House_No__c</fullName>
        <label>Prev Prev Address: House No</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Prev_Address_Post_Code__c</fullName>
        <label>Prev Prev Address: Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Name__c</fullName>
        <label>Any name previously known by</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Business_Address_1__c</fullName>
        <label>Reg Business: Address 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Business_Address_2__c</fullName>
        <label>Reg Business: Address 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Business_Address_3__c</fullName>
        <label>Reg Business: Address 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Business_Address_DateMovedTo__c</fullName>
        <label>Reg Business: Date moved to address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reg_Business_Postcode__c</fullName>
        <label>Reg Business: Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_email_address__c</fullName>
        <inlineHelpText>This is the status of the last email sent by the marketing department. If not delivered, clicked or opened, please update the email address.</inlineHelpText>
        <label>Status of last email sent</label>
        <picklist>
            <picklistValues>
                <fullName>Bounced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clicked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Bounce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undeliverable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Business_Premises_Other__c</fullName>
        <description>Type of Business Premises, If other please specify</description>
        <label>Type of Business Premises, other</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Business_Premises__c</fullName>
        <label>Type of Business Premises</label>
        <picklist>
            <picklistValues>
                <fullName>Owned Outright (01)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned with Mortgage (02)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rented (03)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased (04)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office at Home (05)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (06)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Email_Address__c</fullName>
        <label>Work Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_No__c</fullName>
        <label>Work Phone no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>User_lookup_completed</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>User_lookup__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_lookup__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>User lookup completed</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Business_Contacts</fullName>
        <active>true</active>
        <label>Business Contacts</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Field_Lock_Down_AddressLine2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Customer_Number__c &lt;&gt; &apos;&apos; , $User.Alias &lt;&gt; &apos;SFDC_API&apos;, ISCHANGED( Current_Address_Line_2__c ) =TRUE)</errorConditionFormula>
        <errorDisplayField>Current_Address_Line_2__c</errorDisplayField>
        <errorMessage>You cannot update once Customer has been submitted to EBS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_Lock_Down_AddressLine2prevprev</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Customer_Number__c &lt;&gt; &apos;&apos; , $User.Alias &lt;&gt; &apos;SFDC_API&apos;, ISCHANGED(Prev_Prev_Address_Address_Line_2__c ) =TRUE)</errorConditionFormula>
        <errorDisplayField>Prev_Prev_Address_Address_Line_2__c</errorDisplayField>
        <errorMessage>You cannot update once Customer has been submitted to EBS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_Lock_Down_AddressLine3</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Customer_Number__c &lt;&gt; &apos;&apos; , $User.Alias &lt;&gt; &apos;SFDC_API&apos;, ISCHANGED( Current_Address_Line_3__c ) =TRUE)</errorConditionFormula>
        <errorDisplayField>Current_Address_Line_3__c</errorDisplayField>
        <errorMessage>You cannot update once Customer has been submitted to EBS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_Lock_Down_AddressLine4</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Customer_Number__c &lt;&gt; &apos;&apos; , $User.Alias &lt;&gt; &apos;SFDC_API&apos;, ISCHANGED( Current_Address_Line_4__c ) =TRUE)</errorConditionFormula>
        <errorDisplayField>Current_Address_Line_4__c</errorDisplayField>
        <errorMessage>You cannot update once Customer has been submitted to EBS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_Lock_Down_AddressLine5</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Customer_Number__c &lt;&gt; &apos;&apos; , $User.Alias &lt;&gt; &apos;SFDC_API&apos;, ISCHANGED( Current_Address_Line_5__c ) =TRUE)</errorConditionFormula>
        <errorDisplayField>Current_Address_Line_5__c</errorDisplayField>
        <errorMessage>You cannot update once Customer has been submitted to EBS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_Lock_Down_CustomerNo</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.Alias &lt;&gt; &apos;SFDC_API&apos;, ISCHANGED(Customer_Number__c) =TRUE)</errorConditionFormula>
        <errorDisplayField>Customer_Number__c</errorDisplayField>
        <errorMessage>You cannot update once Customer has been submitted to EBS</errorMessage>
    </validationRules>
</CustomObject>